# evaluateexpresion-alvaroguerreroj-evaluate-expression

./: .clang-format  .clang-tidy  .dir-locals.el  README.md  justfile  meson.build  shell.nix  solution.hpp  tester.h
include/: meson.build  prettyprint.hpp  solution.hpp  tester.hpp
src/: main.cpp  meson.build  solution.cpp
tests/: main.cpp  meson.build
